--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="favorite_button_add">Add to favorite</string>
+    <string name="dialog_question">Add to favorite?</string>
+    <string name="edit_text_label">Enter label here</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
